<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/main_users" />
        <item
            android:id="@+id/nav_keys"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/main_keys" />
        <item
            android:id="@+id/nav_locks"
            android:icon="@drawable/ic_https_black_24dp"
            android:title="@string/main_locks" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/main_tags" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/main_help" />
    </group>

   

</menu>
